# lvgl_test

./: .gitignore  CMakeLists.txt  README.md  build.sh  lv_conf.h
moil/: anypoint_gl.frag  moildev.hpp  moildev_cpu.hpp  moildev_cpu_c_api.h  moildev_ocl.hpp  moildev_ocl_c_api.h  moildev_plugin.hpp
src/: main.cpp  main_stats.cpp  platform_stats.cpp  platform_stats.h
ui/: compat_ui.c  screens.c  screens.h  ui.c  ui.h  ui_events.cpp  ui_new.c  ui_new.h
utils/: shader_render.cpp  shader_render.hpp
